hphp/test/slow/await_precedence/await_new_precedence.php.expectf
Fatal error: Await cannot be used as an expression in %s on line 10
